Bug 118414 - FILEOPEN: Form fields not displayed
Summary: FILEOPEN: Form fields not displayed
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:6.2.0 target:6.1.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: redlinehide-regressions
  Show dependency treegraph
 
Reported: 2018-06-27 15:02 UTC by Xisco Faulí
Modified: 2020-11-19 11:09 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-06-27 15:02:41 UTC
Steps to reproduce:
1. Open attachment 47714 [details] from bug 38071 or attachment 61016 [details] from bug 44319

-> The documents are completely empty and the form fields are missing

Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: 6ebc026e34d0c119067e7dfbad8d932f92844760
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded 

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2018-06-27 15:05:19 UTC
Regression introduced by:

author	Michael Stahl <Michael.Stahl@cib.de>	2018-05-17 12:13:36 +0200
committer	Michael Stahl <Michael.Stahl@cib.de>	2018-06-08 21:51:28 +0200
commit 3e724847308c0d9cdd727898faaeb347c5f0643a (patch)
tree f076d6024d6360e82569b23fcdb8de4df724bab7
parent 7c7937cf228d4148fbd4b48ac41191508ba3c568 (diff)
sw_redlinehide: fix the fieldmark toxic waste in GetNextAttr()
Out of bounds indexes returned here trigger assertions in new
mapping functions.

Why would you set it to p+1 anyway?

Bisected with: bibisect-linux64-6.2

Adding Cc: to Michael Stahl
Comment 2 Xisco Faulí 2018-06-27 15:07:56 UTC
Attachment 75704 [details] from bug 61626 and attachment 72529 [details] from bug 59047 are also affected by this problem
Comment 3 Commit Notification 2018-07-06 08:26:52 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2b0a7c346f8e3c5823a9e032a4501f20bc712914

tdf#118414 sw: fix fieldmarks in GetNextAttr()

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Michael Stahl 2018-07-06 08:45:59 UTC
yeah my fault; fixed on master
Comment 5 Commit Notification 2018-07-06 10:09:42 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1a72ccd57909bf795fe60fafbdcb7ed5566d61cc&h=libreoffice-6-1

tdf#118414 sw: fix fieldmarks in GetNextAttr()

It will be available in 6.1.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2018-07-09 10:41:01 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 67f3063b7c334d4d5c59132d90b938671aad09f0
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

@Michael Stahl, Thanks for fixing this!!