tdf#118414 sw: fix fieldmarks in GetNextAttr()

Apparently this needs to stop both before and after the CH_TXT_ATR_*.

(regression from 3e724847308c0d9cdd727898faaeb347c5f0643a)

Change-Id: Iff3d594d2eec59436ad683b9cc7aca04f7527bd5
Reviewed-on: https://gerrit.libreoffice.org/57017
Tested-by: Jenkins
Reviewed-by: Michael Stahl <Michael.Stahl@cib.de>